--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.datasource.username = postgres
 spring.jpa.hibernate.ddl-auto = create-drop
-spring.jpa.properties.hibernate.enable_lazy_loa
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+spring.data.rest.basePath = /api
